--- a/wrangler.toml
+++ b/wrangler.toml
@@ -16,7 +16,8 @@ preview_id = "080e7d5aad324c3090f0579338c4387b"
 # 环境变量配置
 # 部署前请修改为安全的密码
 [vars]
-CHAT_PASSWORD = "ycc6438985"
+CHAT_PASSWORD = "admin"
+
 
 
 
